add time controller

--- a/sort-problems/visualization of some sort problems/visualization.html
+++ b/sort-problems/visualization of some sort problems/visualization.html
@@ -25,6 +25,8 @@ created by youstair
     <button id="right-out">右侧移除待排数据柱</button>
     <button id="bubble-sort">冒泡排序</button>
     <button id="quick-sort">快速排序</button>
+    <input type="text" id="speed-controller" value="100"/>
+    <button id="time-controler">控制速度(ms)</button>
   </div>
   <div id="queue">
   </div>
